my exoplayer init

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ extensions/cronet/jniLibs/*
 !extensions/cronet/jniLibs/README.md
 extensions/cronet/libs/*
 !extensions/cronet/libs/README.md
+#my
+build.gradle
+gradle/wrapper
